added content to html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Dialog Übung</title>
 </head>
 <body>
-    
+    <h1>Übung Dialog Fenster öffnen</h1>
+
+    <dialog id="myDialog">
+        <header>
+            <h2>Dialog Titel</h2>
+        </header>
+        <section>
+            <p>Dies ist der Inhalt des Dialogs.</p>
+        </section>
+
+        <footer>
+            <button id="closeDialog">Schließen</button>
+        </footer>
+    </dialog>
+    <button id="openDialog">Dialog öffnen</button>
+
 </body>
 </html>
